<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="fracker_image">Image Fracker</string>
    <string name="loading">Loading...</string>
    <string name="group_name">Group name</string>
    <string name="retype_password">Retype password</string>
    <string name="create_group">Create</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="join">Join</string>
    <string name="close">Close</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_notification_distance">Notification distance</string>
    <string name="pref_notification_distance_summary">Set the notification distance</string>
    <string name="pref_random_positions">Random position</string>
    <string name="pref_random_positions_summary">Privacy: Randomize my position</string>
    
    <string name="pref_time_intervals">Sync Position</string>
    <string name="pref_time_intervals_summary">How much time to update my position</string>
    
    
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>

</resources>