<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/menu_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20sp"
            android:text="@string/app_name"
            android:textSize="30sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/input_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/input_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/input_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_first_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/last_name" />

    <Button
        android:id="@+id/create_button"
        style="@style/button_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_last_name"
        android:layout_below="@+id/input_last_name"
        android:layout_margin="4dp"
        android:text="@string/create_group" />

    <Button
        android:id="@+id/cancel_button"
        style="@style/button_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/create_button"
        android:layout_alignBottom="@+id/create_button"
        android:layout_alignRight="@+id/input_password"
        android:layout_margin="4dp"
        android:text="@string/cancel" />

    <EditText
        android:id="@+id/input_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/create_button"
        android:layout_below="@+id/menu_bar"
        android:layout_marginTop="67dp"
        android:ems="10"
        android:hint="@string/username" />

</RelativeLayout>