<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/input_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:ems="10"
            android:inputType="textEmailAddress" 
            android:hint="@string/email"
            />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" 
            android:hint="@string/password"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_marginBottom="35dp"
        android:orientation="horizontal"
        android:padding="10dp" >

        <Button
            android:id="@+id/login_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"                        
            android:background="@drawable/sign_up_button"
            style="@style/button_text"            
            android:text="@string/login" />

        <Button
            android:id="@+id/sign_up_button"
            style="@style/button_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"            
            android:layout_margin="4dp"
            android:layout_marginRight="27dp"
            android:background="@drawable/sign_up_button"
            android:text="@string/sign_up" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        android:contentDescription="@string/fracker_image"
        android:src="@drawable/fracker_banner" />

</RelativeLayout>