<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/white"
    android:gravity="center" >

     <EditText
        android:id="@+id/input_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />
     
    <Button
        android:id="@+id/bt0_popUP"
        style="@style/button_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_password"
        android:layout_below="@+id/input_password"
        android:layout_margin="4dp"
        android:background="@drawable/sign_up_button"            
        android:text="@string/join" />

    <Button
        android:id="@+id/bt1_popUP"
        style="@style/button_text"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bt0_popUP"
        android:layout_alignBottom="@+id/bt0_popUP"
        android:layout_alignRight="@+id/input_password"
        android:background="@drawable/sign_up_button"
        android:layout_margin="4dp"
        android:text="@string/close" />

</RelativeLayout>